crates/strider/tests/snapshots/v2__aarch64be__floats__f32_compare.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v2" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v7" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "6" -> "v7" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v8" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "6" -> "v8" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "5" -> "6" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "9" -> "6" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "10" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v11" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "10" -> "v11" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v12" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "10" -> "v12" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "v8" -> "10" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "10" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "13" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v11" -> "13" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v12" -> "13" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "14" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v15" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "14" -> "v15" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v16" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "14" -> "v16" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "13" -> "14" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "17" -> "14" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "18" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v7" -> "18" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v16" -> "18" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v15" -> "18" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "19" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "18" -> "19" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "20" -> "19" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "21" -> "19" [color="#88cc88", label=x0, fontcolor="#cccccc", fontsize=9];
  "22" -> "19" [color="#88cc88", label=x1, fontcolor="#cccccc", fontsize=9];
  "23" -> "19" [color="#88cc88", label=q0, fontcolor="#cccccc", fontsize=9];
  "24" -> "19" [color="#88cc88", label=q1, fontcolor="#cccccc", fontsize=9];
  "24" [label="φ q1", shape=house, fillcolor="#163030"];
  "18" -> "24" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "25" -> "24" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "26" -> "24" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "26" -> "24" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "26" [label="And:u128", shape=box, fillcolor="#2d2d2d"];
  "27" -> "26" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "28" -> "26" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "28" [label="const 0xffffffff:u128", shape=ellipse, fillcolor="#2d2d2d"];
  "27" [label="ZeroExtend\nu32 → u128", shape=box, fillcolor="#2d2d2d"];
  "29" -> "27" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "29" [label="Truncate\nu128 → u32", shape=box, fillcolor="#2d2d2d"];
  "30" -> "29" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "30" [label="init\nq1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "25" [label="And:u128", shape=box, fillcolor="#2d2d2d"];
  "31" -> "25" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "32" -> "25" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "32" [label="const 0xffffffff:u128", shape=ellipse, fillcolor="#2d2d2d"];
  "31" [label="Or:u128", shape=box, fillcolor="#2d2d2d"];
  "33" -> "31" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "34" -> "31" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "34" [label="And:u128", shape=box, fillcolor="#2d2d2d"];
  "35" -> "34" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "35" [label="const 0xffffffff:u128", shape=ellipse, fillcolor="#2d2d2d"];
  "27" -> "34" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "33" [label="And:u128", shape=box, fillcolor="#2d2d2d"];
  "36" -> "33" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "36" [label="const 0xffffffffffffffffffffffff00000000:u128", shape=ellipse, fillcolor="#2d2d2d"];
  "30" -> "33" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "23" [label="φ q0", shape=house, fillcolor="#163030"];
  "18" -> "23" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "37" -> "23" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "38" -> "23" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "38" -> "23" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "38" [label="And:u128", shape=box, fillcolor="#2d2d2d"];
  "39" -> "38" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "40" -> "38" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "40" [label="const 0xffffffff:u128", shape=ellipse, fillcolor="#2d2d2d"];
  "39" [label="ZeroExtend\nu32 → u128", shape=box, fillcolor="#2d2d2d"];
  "41" -> "39" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "41" [label="Truncate\nu128 → u32", shape=box, fillcolor="#2d2d2d"];
  "42" -> "41" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "42" [label="init\nq0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "37" [label="And:u128", shape=box, fillcolor="#2d2d2d"];
  "43" -> "37" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "44" -> "37" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "44" [label="const 0xffffffff:u128", shape=ellipse, fillcolor="#2d2d2d"];
  "43" [label="Or:u128", shape=box, fillcolor="#2d2d2d"];
  "45" -> "43" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "46" -> "43" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "46" [label="And:u128", shape=box, fillcolor="#2d2d2d"];
  "47" -> "46" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "47" [label="const 0xffffffff:u128", shape=ellipse, fillcolor="#2d2d2d"];
  "39" -> "46" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "45" [label="And:u128", shape=box, fillcolor="#2d2d2d"];
  "48" -> "45" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "48" [label="const 0xffffffffffffffffffffffff00000000:u128", shape=ellipse, fillcolor="#2d2d2d"];
  "42" -> "45" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "22" [label="arg[1] ← x1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "21" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "49" -> "21" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "49" [label="φ Val", shape=house, fillcolor="#163030"];
  "18" -> "49" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "50" -> "49" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "50" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "51" -> "49" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "51" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "52" -> "49" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "52" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "20" [label="φ Mem", shape=house, fillcolor="#163030"];
  "18" -> "20" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "53" -> "20" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "54" -> "20" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "55" -> "20" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "55" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "56" -> "55" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "57" -> "55" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "58" -> "55" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "58" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "57" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "59" -> "57" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "60" -> "57" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "60" [label="const 0xfffffffffffffffc:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "59" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "56" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "61" -> "56" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "62" -> "56" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "29" -> "56" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "62" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "59" -> "62" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "63" -> "62" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "63" [label="const 0xfffffffffffffff4:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "61" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "64" -> "61" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "65" -> "61" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "41" -> "61" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "65" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "59" -> "65" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "66" -> "65" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "66" [label="const 0xfffffffffffffff8:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "64" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "54" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "56" -> "54" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "57" -> "54" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "67" -> "54" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "67" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "53" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "56" -> "53" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "57" -> "53" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "68" -> "53" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "68" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "17" [label="Or:bool", shape=box, fillcolor="#2d2d2d"];
  "69" -> "17" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "70" -> "17" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "70" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "71" -> "70" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "71" [label="Equal\nu8 → bool", shape=box, fillcolor="#2d2d2d"];
  "72" -> "71" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "73" -> "71" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "73" [label="φ OV", shape=house, fillcolor="#163030"];
  "13" -> "73" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "74" -> "73" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "74" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "75" -> "73" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "75" [label="const 0x0:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "72" [label="φ NG", shape=house, fillcolor="#163030"];
  "13" -> "72" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "76" -> "72" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "76" [label="const 0x0:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "77" -> "72" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "77" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "78" -> "77" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "78" [label="Less\nf32 → bool", shape=box, fillcolor="#1a3020"];
  "79" -> "78" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "80" -> "78" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "80" [label="CastToFloat\nu32 → f32", shape=box, fillcolor="#302018"];
  "29" -> "80" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "79" [label="CastToFloat\nu32 → f32", shape=box, fillcolor="#302018"];
  "41" -> "79" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "69" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "81" -> "69" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "81" [label="φ ZR", shape=house, fillcolor="#163030"];
  "13" -> "81" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "82" -> "81" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "82" [label="const 0x0:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "83" -> "81" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "83" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "84" -> "83" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "84" [label="Equal\nf32 → bool", shape=box, fillcolor="#1a3020"];
  "79" -> "84" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "80" -> "84" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "4" [label="Or:bool", shape=box, fillcolor="#2d2d2d"];
  "85" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "86" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "86" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "87" -> "86" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "87" [label="Equal\nf32 → bool", shape=box, fillcolor="#1a3020"];
  "80" -> "87" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "80" -> "87" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "85" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "88" -> "85" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "88" [label="Equal\nf32 → bool", shape=box, fillcolor="#1a3020"];
  "79" -> "88" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "79" -> "88" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "9" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "89" -> "9" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "89" [label="φ NG", shape=house, fillcolor="#163030"];
  "5" -> "89" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "90" -> "89" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "90" [label="const 0x0:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "77" -> "89" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
}
